--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Prueba 1</title>
 </head>
 <body>
-<a name="#arriba"> <h1>Menu</h1></a>
+<a name="arriba"> <h1>Menu</h1></a>
 <a href="#titulo1"><h2>Inicios</h2></a>
 <a href="#titulo2"><h2>2016: Sobre el amor y sus efectos secundarios</h2></a>
 <a href="#titulo3"> <h2>2022: Llamada perdida, París, Valen más, 506 , 23 y cuarto álbum</h2></a>
@@ -16,7 +16,7 @@
     <a href="https://moratoficial.com/" target="_blank"> <img src="morat.webp" alt="No se pudo cargar"> </a><hr color="blue">
 </center>
 <p>Morat es una banda colombiana de pop latino formada originalmente en Bogotá el 13 de diciembre de 2011. Se dieron a conocer en 2015 con su canción Mi nuevo vicio. Sus integrantes son Juan Pablo Isaza Piñeros, Juan Pablo Villamil Cortés, Simón Vargas Morales y Martín Vargas Morales. Hasta finales de 2016 había formado parte de la banda Alejandro Posada Carrasco, tras abandonar el grupo, fue sustituido por Martín Vargas ese mismo año.1​</p>
-
+<a href="#arriba">Menu</a>
 <a name="titulo1"><h2>Inicios</h2></a>
 <p align="justify">Los integrantes de Morat son colombianos y se conocen desde los 5 años de edad, ya que estudiaban juntos en el colegio Gimnasio La Montaña, de la ciudad de Bogotá, y algunos de ellos posteriormente en la Universidad de los Andes.2​ Dos de sus integrantes (Simón y Martín Vargas) son hermanos de sangre.3​4​ <p>Comenzaron tocando juntos en varias ocasiones y cuando cursaban la secundaria5​ Juan Pablo Isaza tomó la decisión de crear una banda cuando seguían estudiando. En el año 2014, la banda realizó una sesión de grabación en Bogotá.5​
     Un sitio al que concurrían mucho como músicos principiantes fue La Tea, donde en un inicio sus fanáticos eran el personal de seguridad. Y con el paso del tiempo empezaron a tener una audiencia propia. Simón Vargas contó esta anécdota respecto a ese lugar: "Recuerdo que teníamos un juego: cada vez que tocábamos en La Tea tratábamos de adivinar cuánta gente iba a vernos...Y, por lo general, llegaban más personas de las que esperábamos."5​
@@ -39,7 +39,9 @@
     «Amor con Hielo» es una de las canciones más energéticas que hemos hecho, tiene una luz especial, con batería y guitarras eléctricas, un sonido más candente. Este un aperitivo de la próxima entrega, nuevos temas de Morat, que es en lo que trabajamos ahora.</p>
     «Amor con Hielo» es una pieza producida por Mauricio Rengifo de Cali y el Dandee (Dandee, concretamente), que ha conseguido un tema que mejora y completa todo lo hecho anteriormente con nuestras composiciones, y ha logrado ayudarnos a evolucionar, extraer de nosotros todo el jugo».​</p>
 
+    <a href="#arriba">Menu</a>
     <a name="titulo2"><h2>2016: Sobre el amor y sus efectos secundarios</h2>></a>
+
     <p align="justify"> Tras su éxito casi inmediato en 2015, lanzaron el 19 de junio de 2016 su primer álbum de estudio, Sobre el amor y sus efectos secundarios, a través de Universal Music, con 12 canciones. El álbum debutó alcanzando el número uno en varios países hispanos como Colombia, México y España.
         En este mismo año, fueron nominados a la categoría Mejor artista nuevo en la ceremonia de los Premios Grammy Latinos a celebrarse el 17 de noviembre. Finalmente, perderían la categoría ante su compatriota Manuel Medrano.9​<p>
         El 19 de diciembre de 2016, Alejandro Posada, el antiguo percusionista de la banda hizo una publicación en redes sociales a través de la cuenta de la banda anunciando que abandonaba Morat para proteger cosas importantes para él, incluyendo sus intenciones de estudiar arquitectura. Sin embargo, anunció que Morat tendría un nuevo baterista, Martín Vargas, hermano de Simón. Con ‘Amor con hielo‘ Morat experimentan una notoria reacción de sus fans en sus conciertos y se posiciona entre los temas más escuchados en streaming en España. “Amor con hielo» marca una nueva etapa en la carrera de Morat.
@@ -52,6 +54,7 @@
        Morat se han convertido en poco tiempo en uno de los grupos de folk pop más importantes.
        Morat es a día de hoy la banda pop más grande de España y América Latina.</p>
 
+       <a href="#arriba">Menu</a>
         <a name="titulo3"><h2>2022: Llamada perdida, París, Valen más, 506 , 23 y cuarto álbum</h2></a>
         <p align="justify">El 18 de febrero de 2022, lanzan el sencillo Llamada Perdida, Su primera canción del año 2022. El 20 de mayo lanzaron París en colaboración con el rapero argentino Duki, y el 29 de julio salió Valen más. El 2 de septiembre lanzaron 506 junto a Juanes, siendo su segunda colaboración junto a él y el 21 de septiembre lanzan 23.
             El 4 de noviembre lanzaron su cuarto álbum de estudio titulado SI AYER FUERA HOY, desprendiendo de este canciones como: Segundos Platos , Santa Fe , Nunca al revés , Debí suponerlo; también una colaboración a lado del cantante Feid; de esta colaboración salió el tema SALIR CON VIDA.</p>
